# yarr

./: .gitignore  Cargo.toml  flake.nix  prowlarr.nix  transmission.nix
indexer/: Cargo.toml
indexer/migrations/: 20250122164821_initial.sql
indexer/src/: app_config.rs  lib.rs  logs.rs  main.rs
indexer/src/providers/: mod.rs  search_results.rs  select_utils.rs
indexer/src/providers/rutracker/: client.rs  html_pages.rs  mod.rs  search_result_page.rs  test_helpers.rs
indexer/src/providers/rutracker/fixtures/: files_tree.html  search_page.html  topic_page.html
indexer/src/providers/rutracker/pages/: files_tree_page.rs  index_page.rs  mod.rs  search_results_page.rs
indexer/src/repos/: cookies_repo.rs  mod.rs
indexer/src/server/: mod.rs  search.rs
indexer/templates/: base.html  search.html
prowlarr-api/: Cargo.toml  README.md
prowlarr-api/.openapi-generator/: FILES
prowlarr-api/docs/: ApiInfoApi.md  AppProfileApi.md  AppProfileResource.md  ApplicationApi.md  ApplicationBulkResource.md  ApplicationResource.md  ApplicationSyncLevel.md  AuthenticationApi.md  BackupApi.md  BookSearchParam.md  Command.md  CommandApi.md  CommandResource.md  CustomFilterApi.md  DevelopmentConfigApi.md  DevelopmentConfigResource.md  DownloadClientApi.md  DownloadClientBulkResource.md  DownloadClientCategory.md  DownloadClientConfigApi.md  DownloadClientConfigResource.md  DownloadClientResource.md  FileSystemApi.md  HealthApi.md  HistoryApi.md  HistoryEventType.md  (+43 more)
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/templates/: base.html
yarr/: Cargo.toml  README.md
(+109 files in other folders)
