[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
config = "0.15.6"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
scraper = "0.22.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.217"
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
